--- a/rf-parallel/train-flow/func.yaml
+++ b/rf-parallel/train-flow/func.yaml
@@ -1,7 +1,8 @@
 name: train-flow
-version: 0.0.64
+version: 0.0.70
 runtime: java
 cmd: com.example.fn.TrainFlow::handleRequest
 build_image: fnproject/fn-java-fdk-build:jdk9-1.0.62
 run_image: fnproject/fn-java-fdk:jdk9-1.0.62
 format: http
+timeout: 120
