--- a/rf-parallel/train-flow/func.yaml
+++ b/rf-parallel/train-flow/func.yaml
@@ -1,5 +1,5 @@
-name: train-flow
-version: 0.0.99
+name: kamalpandala/rfc-train
+version: 0.0.1
 runtime: java
 cmd: com.example.fn.TrainFlow::handleRequest
 build_image: fnproject/fn-java-fdk-build:jdk9-1.0.62
