--- a/rf-parallel/train-flow/train/func.yaml
+++ b/rf-parallel/train-flow/train/func.yaml
@@ -1,5 +1,5 @@
-name: train
-version: 0.0.96
+name: kamalpandala/rfc-train-flow
+version: 0.0.1
 runtime: python
 entrypoint: python3 func.py
 memory: 8192
