--- a/rfc-planner/predict/func.yaml
+++ b/rfc-planner/predict/func.yaml
@@ -2,4 +2,6 @@ name: kamalpandala/rfc-planner-predict
 version: 0.0.1
 runtime: python
 entrypoint: python3 func.py
+format: jsonmemory: 1024
 format: json
+timeout: 3600
